Add account link class and hide on desktop screens

--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -576,7 +576,7 @@
       >
         <a
           href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
-          class="menu-drawer__menu-item menu-drawer__menu-item--mainlist focus-inset"
+          class="menu-drawer__menu-item menu-drawer__menu-item--mainlist menu-drawer__account-link focus-inset"
         >
           <div style="display: flex; align-items: center; gap: 1rem;">
             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1424,5 +1424,10 @@
 
   .drawer-localization .language-selector .svg-wrapper.icon-caret svg {
     transform: none;
+  }
+  @media screen and (min-width: 768px) {
+    .menu-drawer__account-link {
+      display: none !important;
+    }
   }
 {% endstylesheet %}
