Refine search modal and page functionality

--- a/blocks/_search-input.liquid
+++ b/blocks/_search-input.liquid
@@ -1,5 +1,3 @@
-
-
 {%- assign block_settings = block.settings -%}
 
 <script
@@ -78,7 +76,7 @@
     padding-inline: calc(var(--icon-size-lg) + var(--margin-xl) * 1.5);
     text-overflow: ellipsis;
     overflow: hidden;
-    border-radius: var(--style-border-radius-inputs);
+    border-radius: 9999px;
     border: var(--style-border-width-inputs) solid var(--color-input-border);
 
     @media screen and (max-width: 749px) {
