Ensure product prices are always visible and remove modal height constraints

--- a/snippets/predictive-search-products-list.liquid
+++ b/snippets/predictive-search-products-list.liquid
@@ -149,6 +149,14 @@
     justify-content: flex-start;
   }
 
+  .predictive-search-results__card--product .price {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    margin-top: 4px;
+    color: rgb(var(--color-foreground-rgb));
+  }
+
   .recently-viewed-wrapper {
     display: grid;
     grid-template-rows: auto auto;
