--- a/sections/product-list.liquid
+++ b/sections/product-list.liquid
@@ -1,5 +1,3 @@
-
-
 {% liquid
   assign max_items = section.settings.max_products
 %}
@@ -93,6 +91,27 @@
     },
     {
       "type": "_divider"
+    },
+    {
+      "type": "_product-list-content"
+    },
+    {
+      "type": "_product-card"
+    },
+    {
+      "type": "_product-list-text"
+    },
+    {
+      "type": "_product-list-button"
+    },
+    {
+      "type": "_product-card-gallery"
+    },
+    {
+      "type": "product-title"
+    },
+    {
+      "type": "price"
     }
   ],
   "disabled_on": {
