--- a/snippets/resource-image.liquid
+++ b/snippets/resource-image.liquid
@@ -49,10 +49,11 @@
   if content_type == 'articles'
     assign image_resource = image_source
   elsif content_type == 'collections'
-    assign collection = closest.collection
-    assign image_resource = collection.image
-    if image_resource == blank
-      assign image_resource = collection.products.first.featured_image
+    if image_source != blank
+      assign image_resource = image_source
+    else
+      assign collection = closest.collection
+      assign image_resource = collection.image
     endif
   else
     assign image_resource = image_source
